--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Shaz plugin for marking slides with a 'TODO' marker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gendocs": "gendocs > README.md"
   },
   "repository": {
     "type": "git",
